--- a/index.html
+++ b/index.html
@@ -6,238 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keion Live PR</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter&family=Zen+Kaku+Gothic+New&display=swap');
-
-        * {
-            box-sizing: border-box;
-        }
-
-
-        body {
-            background-color: #FFFFFF;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        header {
-            background-color: #FFFFFF;
-            position: fixed;
-            width: 90%;
-            padding: 10px;
-            display: flex;
-            justify-content: flex-end;
-        }
-
-        header a {
-            color: #36BAC4;
-            font-size: 30px;
-            margin-left: 10px;
-            margin-right: 10px;
-        }
-
-
-        main {
-            padding-top: 70px;
-        }
-
-        stream-board {
-            display: flex;
-        }
-
-        img {
-            height: 20vh;
-        }
-
-        #intro {
-            text-align: center;
-            margin-top: 20px;
-            color: #FFFFFF;
-        }
-
-        #news {
-            background-color: #FFFFFF;
-            padding: 20px;
-        }
-
-        #news h2 {
-            color: #666666;
-        }
-
-        #news div {
-            border: 2px solid #36BAC4;
-            padding: 20px;
-            margin-left: 20%;
-            margin-right: 20%;
-        }
-
-
-        #sponsor div {
-            border: 2px solid #36BAC4;
-            padding: 20px;
-            margin-left: 20%;
-            margin-right: 20%;
-        }
-
-        #sponsor img {
-            width: 100%;
-            max-width: 100%;
-            margin-top: 10px;
-        }
-
-        #board div {
-            background-color: #CDEAF4;
-            padding: 20px;
-            margin-left: 30%;
-            width: 40%;
-            border-radius: 10px 10px 10px 10px;
-            margin-bottom: 2vh;
-            height: 200px;
-            overflow-y: auto;
-        }
-
-        #board input[type="text"] {
-            width: 30%;
-            padding: 8px;
-            border-radius: 20px 0 0 20px;
-            border: 1px solid #ccc;
-            outline: none;
-        }
-
-        #board button {
-            width: 10%;
-            padding: 8px;
-            background-color: #4CAF50;
-            color: white;
-            border: 1px solid #ccc;
-            border-radius: 0 20px 20px 0;
-            cursor: pointer;
-            outline: none;
-        }
-
-        #comments {
-            list-style-type: none;
-            padding: 0;
-        }
-
-
-        footer {
-            color: #A1A3A6;
-            text-align: center;
-            padding: 10px;
-            width: 100%;
-            bottom: 0;
-        }
-
-        h2 {
-            font-family: 'Inter', sans-serif;
-            font-weight: bold;
-            font-size: 20px;
-            color: #666666;
-        }
-
-        p {
-            font-family: 'Inter', sans-serif;
-            font-weight: bold;
-            font-size: 15px;
-            color: #FFFFFF;
-        }
-
-        h3 {
-            font-family: 'Zen Kaku Gothic New', sans-serif;
-            font-weight: bold;
-            font-size: 30px;
-            color: #666666;
-        }
-
-        h4 {
-            font-family: 'Zen Kaku Gothic New', sans-serif;
-            font-weight: bold;
-            font-size: 15px;
-            color: #666666;
-        }
-
-        h5 {
-            font-family: 'Zen Kaku Gothic New', sans-serif;
-            font-weight: bold;
-            font-size: 15px;
-            color: #1a1a1a;
-        }
-
-        #stream-board {
-            border: 2px solid #36BAC4;
-            padding: 20px;
-            margin-left: 20%;
-            margin-right: 20%;
-            margin-bottom: 5%;
-        }
-
-        #stream, #board {
-            flex: 1;
-            box-sizing: border-box;
-        }
-
-        .timetable-container {
-            height: 400px;
-            overflow-y: auto;
-            flex-direction: column;
-            border: 2px solid #36BAC4;
-            padding: 20px;
-            margin-left: 20%;
-            margin-right: 20%;
-            margin-bottom: 10vh;
-            scrollbar-width: none;
-        }
-
-        .timetable-row {
-            flex: 1;
-        }
-
-        .timetable-cell {
-            flex: 1;
-            box-sizing: border-box;
-            border-radius: 10px;
-            margin: 5px;
-            padding: 10px;
-            width: 20vw;
-            margin-left: 32%;
-        }
-
-        .red {
-            background-color: #FFC9D2;
-        }
-
-        .green {
-            background-color: #D0E2BE;
-        }
-
-        .blue {
-            background-color: #36BAC4;
-        }
-
-        .orange {
-            background-color: #FBCC9A;
-        }
-
-        .now {
-            margin-left: 40%;
-            width: 20vw;
-            height: 5vh;
-            border-radius: 20px;
-            background-color: #71BFEB;
-        }
-
-        .next {
-            margin-left: 40%;
-            width: 20vw;
-            height: 5vh;
-            border-radius: 20px;
-            background-color: #B2DEE6;
-            margin-bottom: 5vh;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
