--- a/index.html
+++ b/index.html
@@ -85,6 +85,27 @@
     <footer>
         ©︎2024 Keion Live PR
     </footer>
+
+    <script>
+        // 外部ファイルから曲のデータを読み込む
+        fetch('songs.json')
+            .then(response => response.json())
+            .then(songs => {
+
+                function renderTimetable() {
+                    const timetableContainer = document.getElementById('timetable-container');
+                    songs.forEach(song => {
+                        const cell = document.createElement('div');
+                        cell.className = `timetable-cell ${song.category}`;
+                        cell.innerHTML = `<p>${song.artist} - ${song.title}</p>`;
+                        timetableContainer.appendChild(cell);
+                    });
+                }
+
+                renderTimetable();
+            })
+            .catch(error => console.error('Error fetching songs:', error));
+    </script>
 </body>
 
 </html>
