--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <img id="logo" src="keion.webp" alt="Logo">
 
         <div id="intro">
-            <h3>2023年度軽音楽部<br>集大成の最後のライブ<br>2024.3.29 (Sun.)<br>@広尾学園サブアリーナ</h3>
+            <h3>2023年度軽音楽部<br>集大成の最後のライブ<br>DAY1:2024.3.28 (Thu.)13:00~17:00<br>DAY1:2024.3.29 (Fri.)13:30~17:30<br>@広尾学園ラウンジ&2A</h3>
         </div>
 
         <div id="news">
             <h2>News</h2>
             <div>
                     <h5>
-                        欧州委、大韓航空のアシアナ買収を承認
+                        2024.02.19 ウェブサイトを公開しました。
                     </h5>
             </div>
         </div>
