--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header>
-        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/Hirogaku_keion_"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://www.instagram.com/hg_k_on?utm_source=qr&igsh=MWpqZ2gzdG9kZnh0OQ%3D%3D"><i class="fab fa-instagram"></i></a>
     </header>
 
     <main>
