--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="apple-touch-icon" href="keion.ico">
+    <link rel="icon" href="keion.png" type="image/png">
 </head>
 
 <body>
