--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div id="timetable">
             <h2>Timetable</h2>
-            <h4>赤:H3 緑:H2 青:H1 橙:混合</h4>
+            <h4>赤:H3 緑:H2 青:H1 橙:混合<br>バンド名-演奏曲</h4>
             <div class="timetable-container" id="timetable-container">
             </div>
         </div>
