--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Keion Live PR</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animation.css">
     <link rel="apple-touch-icon" href="keion.ico">
     <link rel="icon" href="keion.png" type="image/png">
 </head>
@@ -58,7 +59,8 @@
     <footer>
         ©︎2024 Keion Live PR
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="animation.js"></script>
     <script src="script.js"></script>
 </body>
 
