--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img id="logo" src="keion.webp" alt="Logo">
 
         <div id="intro">
-            <h3>2023年度軽音楽部<br>集大成の最後のライブ<br>DAY1:2024.3.28 (Thu.)13:00~17:00<br>DAY2:2024.3.29 (Fri.)13:30~17:30<br>@広尾学園ラウンジ&2A</h3>
+            <h3 class="glowAnime">2023年度軽音楽部<br>集大成の最後のライブ<br>DAY1:2024.3.28 (Thu.)13:00~17:00<br>DAY2:2024.3.29 (Fri.)13:30~17:30<br>@広尾学園ラウンジ&2A</h3>
         </div>
 
         <div id="news">
