--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Keion Live PR</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="animation.css">
     <link rel="apple-touch-icon" href="keion.ico">
     <link rel="icon" href="keion.png" type="image/png">
 </head>
@@ -22,7 +21,7 @@
         <img id="logo" src="keion.webp" alt="Logo">
 
         <div id="intro">
-            <h3 class="glowAnime">2023年度軽音楽部<br>集大成の最後のライブ<br>DAY1:2024.3.28 (Thu.)13:00~17:00<br>DAY2:2024.3.29 (Fri.)13:30~17:30<br>@広尾学園ラウンジ&2A</h3>
+            <h3>2023年度軽音楽部<br>集大成の最後のライブ<br>DAY1:2024.3.28 (Thu.)13:00~17:00<br>DAY2:2024.3.29 (Fri.)13:30~17:30<br>@広尾学園ラウンジ&2A</h3>
         </div>
 
         <div id="news">
@@ -59,8 +58,7 @@
     <footer>
         ©︎2024 Keion Live PR
     </footer>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="animation.js"></script>
+
     <script src="script.js"></script>
 </body>
 
