--- a/index.html
+++ b/index.html
@@ -21,15 +21,20 @@
         <img id="logo" src="keion.webp" alt="Logo">
 
         <div id="intro">
-            <h3>2023年度軽音楽部<br>集大成の最後のライブ<br>DAY1:2024.3.28 (Thu.)13:00~17:00<br>DAY2:2024.3.29 (Fri.)13:30~17:30<br>@広尾学園ラウンジ&2A</h3>
+            <h1 class="anime">
+                <span class="letters letters-1">2023年度軽音楽部</span>
+                <span class="letters letters-2">集大成の最後のライブ</span>
+                <span class="letters letters-3">Go!</span>
+            </h1>
+            <h3>DAY1:2024.3.28 (Thu.)13:00~17:00<br>DAY2:2024.3.29<br>(Fri.)13:30~17:30<br>@広尾学園ラウンジ&2A</h3>
         </div>
 
         <div id="news">
             <h2>News</h2>
             <div>
-                    <h5>
-                        2024.02.19 ウェブサイトを公開しました。
-                    </h5>
+                <h5>
+                    2024.02.19 ウェブサイトを公開しました。
+                </h5>
             </div>
         </div>
 
@@ -42,24 +47,26 @@
 
         <div id="stream-board">
             <h2>Stream</h2>
-                <div id="stream">
-                    <iframe src="https://player.vimeo.com/video/動画ID" frameborder="0" allowfullscreen></iframe>
-                </div>
+            <div id="stream">
+                <iframe src="https://player.vimeo.com/video/動画ID" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
 
-            <div id="sponsor">
-                <h2>Sponsor</h2>
-                <div>
-                    <!-- スポンサー一覧はここ。ロゴ画像でやる。 -->
-                </div>
+        <div id="sponsor">
+            <h2>Sponsor</h2>
+            <div>
+                <!-- スポンサー一覧はここ。ロゴ画像でやる。 -->
             </div>
+        </div>
     </main>
 
     <footer>
         ©︎2024 Keion Live PR
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="script.js"></script>
+    <script src="animation.js"></script>
 </body>
 
 </html>
