--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img id="logo" src="keion.webp" alt="Logo">
 
         <div id="intro">
-            <h1 class="anime">
+            <h1 class="ml4">
                 <span class="letters letters-1">2023年度軽音楽部</span>
                 <span class="letters letters-2">集大成の最後のライブ</span>
                 <span class="letters letters-3">Go!</span>
@@ -65,8 +65,8 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="script.js"></script>
     <script src="animation.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
