--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 class="ml4">
                 <span class="letters letters-1">2023年度軽音楽部</span>
                 <span class="letters letters-2">集大成の最後のライブ</span>
-                <span class="letters letters-3">Go!</span>
+                <span class="letters letters-3">Coming soon!</span>
             </h1>
             <h3>DAY1:2024.3.28 (Thu.)13:00~17:00<br>DAY2:2024.3.29<br>(Fri.)13:30~17:30<br>@広尾学園ラウンジ&2A</h3>
         </div>
