--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span class="letters letters-3">Coming soon!</span>
             </h1>
             <h1 class="substitute-text">2023年度軽音楽部卒業ライブ</h1>
-            <h3>DAY1:2024.3.28 (Thu.)13:00~17:00<br>DAY2:2024.3.29<br>(Fri.)13:30~17:30<br>@広尾学園ラウンジ&2A</h3>
+            <h3>DAY1: 2024.3.28 (Thu.)13:00~17:00<br>DAY2: 2024.3.29(Fri.)13:30~17:30<br>@広尾学園ラウンジ&2A</h3>
         </div>
 
         <div id="news">
