--- a/index.html
+++ b/index.html
@@ -18,32 +18,12 @@
     </header>
 
     <main>
-        <img id="logo" src="keion.webp" alt="Logo">
+        <img class="pc" src="keion-pink.png" alt="パソコン用の画像">
+        <img class="sp" src="keion.webp" alt="スマートフォン用の画像">
 
         <div id="intro">
-            <h1 class="ml4">
-                <span class="letters letters-1">2023年度軽音楽部</span>
-                <span class="letters letters-2">集大成の最後のライブ</span>
-                <span class="letters letters-3">Coming soon!</span>
-            </h1>
             <h1 class="substitute-text">2023年度軽音楽部卒業ライブ</h1>
-            <h3>DAY1: 2024.3.28 (Thu.)13:00~17:00<br>DAY2: 2024.3.29(Fri.)13:30~17:30<br>@広尾学園ラウンジ&2A</h3>
-        </div>
-
-        <div id="news">
-            <h2>News</h2>
-            <div>
-                <h5>
-                    2024.02.19 ウェブサイトを公開しました。
-                </h5>
-            </div>
-        </div>
-
-        <div id="timetable">
-            <h2>Timetable</h2>
-            <h4>赤:H3 緑:H2 青:H1 橙:混合<br>バンド名-演奏曲</h4>
-            <div class="timetable-container" id="timetable-container">
-            </div>
+            <h3>DAY1: 2024.3.28 (Thu.)12:00~15:00<br>DAY2: 2024.3.29(Fri.)12:00~15:00<br>@広尾学園ラウンジ&2A</h3>
         </div>
 
         <h2>Stream</h2>
@@ -53,12 +33,23 @@
             </div>
         </div>
 
-        <div id="sponsor">
-            <h2>Sponsor</h2>
+        <div id="news">
+            <h2>News</h2>
             <div>
-                <!-- スポンサー一覧はここ。ロゴ画像でやる。 -->
+                <h5>
+                    2024.03.12 バンド一覧を更新しました。<br>
+                    2024.02.19 ウェブサイトを公開しました。
+                </h5>
             </div>
         </div>
+
+        <div id="timetable">
+            <h2>Bands</h2>
+            <h4>赤:H3 緑:H2 橙:混合<br>バンド名-演奏曲</h4>
+            <div class="timetable-container" id="timetable-container">
+            </div>
+        </div>
+
     </main>
 
     <footer>
